<resources>
    <string name="app_name">DTeacher</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="error_title_min_characters">At least %1$d characters</string>
    <string name="shortcut_long_label">Test</string>
    <string name="shortcut_short_label">Test</string>
    <string name="shortcut_disabled_message">Test</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="number_picker_formatter">%04d</string>
    <string name="number_picker_formatter2">%03d</string>
    <string name="diabetes_pill">당뇨약</string>
    <string name="rapid">초속효성</string>
    <string name="rapid2">속효성</string>
    <string name="netural">중간형</string>
    <string name="longtime">지속형</string>
    <string name="mixed">혼합형</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string-array name="stepLabels">
        <item>측정 시기</item>
        <item>혈당 입력</item>
        <item>시간 입력</item>
    </string-array>
    <string-array name="photos">
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
        <item>@drawable/fix_syringe</item>
    </string-array>
    <string name="all">All</string>
    <string name="createnote">Create note</string>
    <string name="closedrawer">Close drawer</string>
    <string name="favorites">Favorites</string>
    <string name="notes">Notes</string>
    <string name="opendrawer">Open drawer</string>
    <string name="photo">Photo</string>
    <string name="recording">Recording</string>
    <string name="refresh">Refresh</string>
    <string name="reminder">Reminder</string>
    <string name="search">Search</string>
    <string name="shared">Shared</string>
    <string name="sheet_item_pressed">Item pressed</string>
    <string name="snackbar_shared_msg">Gordon Wong shared a note with you.</string>
    <string name="view">View</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="hello_world">Hello world!</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="SEARCH">Search</string>
    <string name="STOP">Stop</string>
    <string name="CLOSE">Close</string>
    <string name="ValidationWarningPopup_31">This mobile device doesn\'t support Bluetooth 4.0.</string>
    <string name="bond_none">Failed to connect to Bluetooth.\nPlease, try to reconnect.</string>
    <string name="bonded">Connected to Bluetooth.\nPlease, turn meter on again to download glucose data.</string>
    <string name="not_supported">This mobile device doesn\'t support Bluetooth 4.0. </string>
    <string name="gls_operation_not_supported">Download failed (Code 109)</string>
    <string name="gls_operation_failed">Download failed (Code 110)</string>
    <string name="ERROR_CONNECTION_STATE_CHANGE">Download failed (Code 111)</string>
    <string name="ERROR_DISCOVERY_SERVICE">Download failed (Code 112)</string>
    <string name="ERROR_WRITE_DESCRIPTOR">Download failed (Code 113)</string>
    <string name="ERROR_WRITE_CHARACTERISTIC">Download failed (Code 114)</string>
    <string name="ERROR_AUTH_ERROR_WHILE_BONDED">Download failed (Code 115)</string>
    <string name="ERROR_SEQUENCE_NUMBER">Download failed (Code 116)</string>
    <string name="ValidationWarningPopup_36">No more than 10 registered meters allowed. Please delete unused meters.</string>
    <string name="error_software_revision">The meter\'s software version does not support. Please update the SmartLog.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">DiaryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>